# CourseVault

./: Pipfile  README.md  pyproject.toml
instance/: database.db
website/: __init__.py  ajax.py  auth.py  functions.py  models.py  views.py
website/templates/: add_school.html  base.html  course.html  course_preview.html  courses_info.html  cover.html  extend.html  forgotpassword.html  home.html  instructor_course.html  instructor_sign_up.html  login.html  progress.html  reset_pw.html  schoolsignup.html  security_question.html  securityquestion.html  signup.html  students-info.html  upload.html  upload_course.html
