[tool.poetry]
name = "coursevault"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
0flask = "^0.0.1"
Flask-Login = "^0.6.3"
Flask-SQLAlchemy = "^3.1.1"
py-bcrypt = "^0.4"
tensorflow = "^2.17.0"
flask = "^3.0.3"
transformers = "^4.45.1"
werkzeug = "^3.0.4"
flask-wtf = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
